{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 24,
  "lineage": "3692d5e9-23ea-d058-61bf-74f2756beac6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "do2-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dcc0ebde7b2e00db",
            "arn": "arn:aws:ec2:eu-central-1:105758083827:instance/i-0de8300e4d95a2833",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de8300e4d95a2833",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac4463aaf2611e59",
            "private_dns": "ip-10-10-10-135.eu-central-1.compute.internal",
            "private_ip": "10.10.10.135",
            "public_dns": "ec2-52-28-132-131.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.28.132.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04bc5cda09b0fbf48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6844c1468c1b375",
            "tags": {
              "Name": "do2-server-1"
            },
            "tags_all": {
              "Name": "do2-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069c3960e6b154643"
            ]
          },
          "dependencies": [
            "aws_security_group.do2-pub-sg",
            "aws_subnet.do2-snet",
            "aws_vpc.do2-vpc",
            "data.aws_availability_zones.do2-avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dcc0ebde7b2e00db",
            "arn": "arn:aws:ec2:eu-central-1:105758083827:instance/i-0afdb7d3445910c99",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afdb7d3445910c99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3ea3c38f75b6a3b",
            "private_dns": "ip-10-10-11-149.eu-central-1.compute.internal",
            "private_ip": "10.10.11.149",
            "public_dns": "ec2-35-157-138-153.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.138.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e2d0a9b68b40750",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097ffca6d6efd3080",
            "tags": {
              "Name": "do2-server-2"
            },
            "tags_all": {
              "Name": "do2-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069c3960e6b154643"
            ]
          },
          "dependencies": [
            "aws_security_group.do2-pub-sg",
            "aws_subnet.do2-snet",
            "aws_vpc.do2-vpc",
            "data.aws_availability_zones.do2-avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "do2-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:105758083827:internet-gateway/igw-0e51be6ae8fd18b5e",
            "id": "igw-0e51be6ae8fd18b5e",
            "owner_id": "105758083827",
            "tags": {
              "Name": "DO2-IGW"
            },
            "tags_all": {
              "Name": "DO2-IGW"
            },
            "vpc_id": "vpc-0dddddb50362124dc"
          },
          "dependencies": [
            "aws_vpc.do2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "do2-prt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:105758083827:route-table/rtb-0d85bd8289640d358",
            "id": "rtb-0d85bd8289640d358",
            "owner_id": "105758083827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e51be6ae8fd18b5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DO2-PUBLIC_RT"
            },
            "tags_all": {
              "Name": "DO2-PUBLIC_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dddddb50362124dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.do2-igw",
            "aws_vpc.do2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "do2-prt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01703011d83ef4439",
            "route_table_id": "rtb-0d85bd8289640d358",
            "subnet_id": "subnet-0c6844c1468c1b375"
          },
          "dependencies": [
            "aws_internet_gateway.do2-igw",
            "aws_route_table.do2-prt",
            "aws_subnet.do2-snet",
            "aws_vpc.do2-vpc",
            "data.aws_availability_zones.do2-avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4d58628a276a47c",
            "route_table_id": "rtb-0d85bd8289640d358",
            "subnet_id": "subnet-097ffca6d6efd3080"
          },
          "dependencies": [
            "aws_internet_gateway.do2-igw",
            "aws_route_table.do2-prt",
            "aws_subnet.do2-snet",
            "aws_vpc.do2-vpc",
            "data.aws_availability_zones.do2-avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "do2-pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:105758083827:security-group/sg-069c3960e6b154643",
            "description": "DO2 Public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069c3960e6b154643",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "do2-pub-sg",
            "name_prefix": "",
            "owner_id": "105758083827",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dddddb50362124dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.do2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "do2-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:105758083827:subnet/subnet-0c6844c1468c1b375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6844c1468c1b375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105758083827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DO2-SUB-NET-1"
            },
            "tags_all": {
              "Name": "DO2-SUB-NET-1"
            },
            "vpc_id": "vpc-0dddddb50362124dc"
          },
          "dependencies": [
            "aws_vpc.do2-vpc",
            "data.aws_availability_zones.do2-avz"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:105758083827:subnet/subnet-097ffca6d6efd3080",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097ffca6d6efd3080",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105758083827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DO2-SUB-NET-2"
            },
            "tags_all": {
              "Name": "DO2-SUB-NET-2"
            },
            "vpc_id": "vpc-0dddddb50362124dc"
          },
          "dependencies": [
            "aws_vpc.do2-vpc",
            "data.aws_availability_zones.do2-avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "do2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:105758083827:vpc/vpc-0dddddb50362124dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-033182fdede930ec8",
            "default_route_table_id": "rtb-054d0d71d2a5d2ee5",
            "default_security_group_id": "sg-02176fb4c953c2b48",
            "dhcp_options_id": "dopt-0e630862abe3fe9ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dddddb50362124dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054d0d71d2a5d2ee5",
            "owner_id": "105758083827",
            "tags": {
              "Name": "DO2-VPC"
            },
            "tags_all": {
              "Name": "DO2-VPC"
            }
          }
        }
      ]
    }
  ]
}